--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".json.activity.NativeJsonParseActivity"/>
+        <activity android:name=".gson.activity.GsonParseActivity"></activity>
+        <activity android:name=".json.activity.NativeJsonParseActivity" />
         <activity android:name=".okhttp.activity.OkHttpActivity" />
         <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
