--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".gson.activity.GsonParseActivity"></activity>
+        <activity android:name=".fastjson.FastJsonParseActivity"></activity>
+        <activity android:name=".gson.GsonParseActivity" />
         <activity android:name=".json.activity.NativeJsonParseActivity" />
         <activity android:name=".okhttp.activity.OkHttpActivity" />
         <activity android:name=".LauncherActivity">
