--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dionysus.stydyinbook">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".jsonparse.fastjson.FastJsonParseActivity"></activity>
+        <activity android:name=".xuitls3.XUitls3Acticity"></activity>
+        <activity android:name=".jsonparse.fastjson.FastJsonParseActivity" />
         <activity android:name=".jsonparse.gson.GsonParseActivity" />
         <activity android:name=".jsonparse.json.activity.NativeJsonParseActivity" />
         <activity android:name=".okhttp.activity.OkHttpActivity" />
