--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.alibaba:fastjson:1.2.58'
     implementation 'org.xutils:xutils:3.5.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
