--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dionysus.stydyinbook">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,12 +10,15 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".glide.activity.GlideActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:replace="android:appComponentFactory">
+        <activity android:name=".butterknife.ButterKnifeActivity" />
+        <activity android:name=".glide.activity.GlideActivity" />
         <activity android:name=".xuitls3.net.XUtils3NetActivity" />
         <activity android:name=".xuitls3.annotation.FragmentXutils3Acitivty" />
         <activity android:name=".xuitls3.XUitls3Acticity" />
