【尚硅谷】【第11讲：Glide-图片加载框架】【Glide案列主布局】

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:appComponentFactory">
+        <activity android:name=".glide.activity.GlideTranformationsActivity"></activity>
+        <activity android:name=".glide.activity.GlideRecyclerviewActivity" />
+        <activity android:name=".glide.activity.GlideBaseActivity" />
         <activity android:name=".butterknife.ButterKnifeActivity" />
         <activity android:name=".glide.activity.GlideActivity" />
         <activity android:name=".xuitls3.net.XUtils3NetActivity" />
