【Android工程】【无】【给项目添加阿里云的maven镜像仓库，让加载依赖时嗖嗖的】

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@
 
 buildscript {
     repositories {
+        //阿里云的镜像库
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         google()
         jcenter()
     }
@@ -15,6 +19,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         google()
         jcenter()
     }
