--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".glide.activity.GlideTransformationActivity"></activity>
+        <activity android:name=".eventbus.activity.EventBusSendActivity" />
+        <activity android:name=".eventbus.activity.EventBusActivity" />
+        <activity android:name=".glide.activity.GlideTransformationActivity" />
         <activity android:name=".glide.activity.GlideRecyclerviewActivity" />
         <activity android:name=".glide.activity.GlideBaseActivity" />
         <activity android:name=".butterknife.ButterKnifeActivity" />
